# passenger-feedback-analysis

./: .gitignore  README.md  pyproject.toml
data/raw/: feedback.csv
notebooks/: 01_data_preparation.ipynb  02_sentiment_analysis.ipynb  03_named_entity_extraction.ipynb  04_topic_modeling.ipynb
utils/: config.py  constants.py  data_loader.py  encoding.py  feature_engineering.py  helpers.py  model_utils.py  ner_utils.py  preprocessing.py  topic_utils.py  visualization.py
