[project]
name = "passenger-feedback-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "transformers>=5.14.1",
    "wordcloud>=1.9.6",
]
